--- a/src/components/About/AboutHero.css
+++ b/src/components/About/AboutHero.css
@@ -177,8 +177,9 @@
       margin-top: 9rem;
    }
    .about-hero-h1 {
-      max-width: 38rem;
-      font-size: 2.7em;
+      max-width: 35rem;
+      font-size: 2.2em;
+      padding-top: 8rem;
       line-height: 2.8rem;
       margin-bottom: 1.5rem;
    }
