--- a/src/components/Pages/Cases/Cases.css
+++ b/src/components/Pages/Cases/Cases.css
@@ -97,7 +97,7 @@
       margin-bottom: 2.5rem;
    }
    .cases-reset-filters {
-      margin: 2rem 0;
+      margin: 2rem auto;
    }
 }
 @media (min-width: 90rem) {
