--- a/src/components/Accordion/Accordion.css
+++ b/src/components/Accordion/Accordion.css
@@ -40,6 +40,7 @@
 .accordion-content-text {
    font-size: 1.125rem;
    overflow-y: hidden;
+   color: #717171;
 }
 .cases-dropdown-subtitle {
    font-size: 1.25em;
