Revert "Entrega del nuevo diseño del sitio web"

--- a/src/components/Home/HomeServices.css
+++ b/src/components/Home/HomeServices.css
@@ -1,240 +1,175 @@
-.home-services {
-   overflow: hidden;
-   /* padding: 0 1rem; */
-   position: relative;
+.home-services{
+    overflow: hidden;
+    /* padding: 0 1rem; */
+    position: relative;
 }
-.home-services-bg {
-   margin-top: 5rem;
-   height: 100%;
-   width: 100%;
-   position: absolute;
-   top: -9rem;
-   z-index: -1;
-   background: url("../../assets/Bg-home-services.png") no-repeat;
-   background-position: 0 100%;
-   background-size: cover;
+.home-services-bg{
+    margin-top: 5rem;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: -9rem;
+    z-index: -1;
+    background: url('../../assets/Bg-home-services.png') no-repeat;
+    background-position: 0 100%;
+    background-size: cover;
 }
-.home-services-bg:before {
-   content: "";
-   height: 100%;
-   width: 100%;
-   position: absolute;
-   top: 0;
-   background: linear-gradient(0deg, #f4f3ef 0%, #ffffff00 100%);
+.home-services-bg:before{
+    content: '';
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    background: linear-gradient(0deg, #F4F3EF 0%, #ffffff00 100%);
 }
-
+.home-services-img{
+    width: 100vw;
+    height: 22rem;
+    max-width: 37.5rem;
+    min-height: 20rem;
+    object-fit: cover;
+    text-align: center;
+    opacity: 0.4;
+}
 .home-text-container {
-   display: flex;
-}
+    display: flex;
+  }
 
-.services-h2-animation {
-   white-space: nowrap;
-   padding: 1rem;
-   animation: scrollLeft 80s linear infinite;
-   /* Single animation */
-   animation-play-state: running;
-}
-
-.services-h2-animation:hover {
-   animation-play-state: paused;
+.services-h2-animation{
+    white-space: nowrap;
+    padding: 1rem;
+    animation: scrollLeft 38s linear infinite;
 }
 
 .home-services-h2 {
-   font-size: clamp(2.875em, 7vw, 4.4em);
-   color: #fff;
-   text-wrap: nowrap;
-   text-shadow: 0 0 2px black;
+    font-size: clamp(2.875em,7vw,4.4em);
+    color: #fff;
+    text-wrap: nowrap;
 }
+
+.services-h2-animation:hover{
+    animation: scrollLeft 60s linear infinite;
+}
+
 
 @keyframes scrollLeft {
-   100% {
+    100% {
       transform: translateX(-100%);
-   }
+    }
+  }
+.home-services-h2 span{
+    color: #B6B4F6;
 }
-.home-services-h2 span {
-   color: #b6b4f6;
+.home-services-p{
+    font-size: 1.25em;
+    padding-top: 1rem;
+    line-height: 1.625rem;
+    color: #3C3C3B;
+    text-wrap: balance;
+    max-width: 30rem;
 }
-.home-services-p {
-   font-size: 1.25em;
-   padding-top: 1rem;
-   line-height: 1.625rem;
-   color: #3c3c3b;
-   text-wrap: balance;
-   max-width: 30rem;
+.home-services-info{
+    padding: 0 1rem;
 }
-
-.home-services-img {
-   align-self: flex-start;
-   object-fit: cover;
-   opacity: 0.4;
-}
-
-.home-services-info {
-   max-width: 1400px;
-   margin-inline: auto;
-}
-
 @media (min-width: 40rem) {
-   .home-services-info {
-      display: flex;
-      flex-direction: column;
-   }
-
-   .home-services-p {
-      font-size: 1.65em;
-      line-height: 1.725rem;
-      padding-top: 2rem;
-   }
-   .home-services-bg {
-      background-position: 0 50%;
-   }
-   .home-services-btn {
-      margin-top: 3rem;
-   }
+    .home-services-info{
+        display: flex;
+        flex-direction: column;
+    }
+    .home-services-img{
+        align-self: center;
+        margin-left: 4rem;
+    }
+    .home-services-p{
+        font-size: 1.35em;
+        line-height: 1.725rem;
+        padding-top: 2rem;
+    }
+    .home-services-bg{
+        background-position: 0 50%;
+    }
+    .home-services-btn {
+        margin-top: 3rem;
+    }
 }
-@media (min-width: 56.25rem) {
-   .home-services-h2 {
-      margin-top: 2rem;
-      font-size: 4em;
-   }
-   .home-services-info {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-   }
-
-   .home-services-p {
-      max-width: 35rem;
-   }
-   .home-services-bg {
-      background-position: 0 10%;
-   }
+@media(min-width:56.25rem){
+    .home-services-info{
+        padding: 0 2.5rem;
+    }
+    .home-services-h2{
+        margin-top: 2rem;
+        font-size: 4em;
+    }
+    .home-services-info{
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .home-services-img{
+        max-width: 40rem;
+        width: 70vw;
+        height: 90%;
+        margin: 0;
+    }
+    .home-services-p{
+        max-width: 35rem;
+    }
+    .home-services-bg{
+        background-position: 0 10%;
+    }
 }
-@media (min-width: 90rem) {
-   .home-services-p {
-      font-size: 1.875em;
-      line-height: 2.23rem;
-      max-width: 40rem;
-   }
-   .home-services-text > button {
-      margin-top: 4rem;
-   }
-
-   .home-services-bg {
-      background-position: 0 10%;
-   }
-   .home-services-p {
-      font-size: 1.875rem;
-      line-height: 2rem;
-      max-width: 40rem;
-   }
-   .home-services-btn {
-      margin-top: 4rem;
-   }
+@media(min-width: 90rem){
+    .home-services-info{
+        padding: 0 4rem;
+    }
+    .home-services-p{
+        font-size: 1.875em;
+        line-height: 2.23rem;
+        max-width: 40rem;
+    }
+    .home-services-text > button{
+       margin-top: 4rem;
+    }
+    .home-services-img{
+        max-width: 45rem;
+        width: 70vw;
+        height: 70%;
+        margin: 0;
+    }
+    .home-services-bg{
+        background-position: 0 10%;
+    }
+    .home-services-p{
+        font-size: 1.875rem;
+        line-height: 2rem;
+        max-width: 40rem;
+    }
+    .home-services-btn {
+        margin-top: 4rem;
+    }
 }
-@media (min-width: 110rem) {
-   .home-services-p {
-      position: relative;
-      left: -2rem;
-      z-index: 1;
-      font-size: 1.875rem;
-      line-height: 2rem;
-      max-width: 48rem;
-   }
-   .home-services-btn {
-      position: relative;
-      left: -2rem;
-      z-index: 1;
-   }
-
-   .home-services-p {
-      font-size: 2em;
-      line-height: 2.3rem;
-   }
-}
-
-@media screen and (max-width: 1700px) {
-   .home-services-info {
-      padding-inline: 3rem;
-   }
-}
-
-@media screen and (max-width: 1500px) {
-   .home-services-img {
-      width: 50%;
-   }
-}
-
-@media screen and (max-width: 1440px) {
-   .home-services-info {
-      padding-inline: 6rem;
-      padding-bottom: 1rem;
-   }
-}
-
-@media screen and (max-width: 1150px) {
-   .home-text-container {
-      padding-top: 7rem;
-   }
-   .home-services-info {
-      padding-bottom: 2rem;
-   }
-
-   .home-services-img {
-      width: 60%;
-   }
-
-   .home-services-bg {
-      top: -4rem;
-   }
-
-   .home-services-p {
-      font-size: 1.3em;
-   }
-}
-
-@media screen and (max-width: 897px) {
-   .home-services-img {
-      width: 60%;
-      margin-block: -5rem;
-   }
-   .home-services-p {
-      max-width: 100%;
-      text-wrap: initial;
-   }
-
-   .home-services-btn {
-      font-size: 1.1rem;
-   }
-}
-
-@media screen and (max-width: 640px) {
-   .home-services-img {
-      margin-block: -3rem;
-   }
-
-   .home-text-container {
-      padding-top: 3rem;
-   }
-
-   #homeServices {
-      padding-top: 3rem;
-   }
-}
-
-@media screen and (max-width: 500px) {
-   .home-services-img {
-      width: 80%;
-      margin-bottom: -2rem;
-   }
-   .home-services-info {
-      padding-inline: 1.3rem;
-   }
-}
-
-@media screen and (max-width: 450px) {
-   #homeServices {
-      padding-top: 1rem;
-   }
-  
+@media(min-width: 110rem){
+    .home-services-p{
+        position: relative;
+        left: -2rem;
+        z-index: 1;
+        font-size: 1.875rem;
+        line-height: 2rem;
+        max-width: 48rem;
+    }
+    .home-services-btn {
+        position: relative;
+        left: -2rem;
+        z-index: 1;
+    }
+    .home-services-img{
+        max-width: 55rem;
+        width: 90vw;
+        height: 60%;
+        margin-left: 8rem;
+    }
+    .home-services-p{
+        font-size: 2em;
+        line-height: 2.3rem;
+    }
 }
