--- a/src/components/AboutHero.css
+++ b/src/components/AboutHero.css
@@ -26,6 +26,10 @@
     
 }
 
+.about-section-need{
+    margin: 1rem 1rem  0;
+    position: relative;
+}
 
 .about-hero-h1{
     font-size: 1.5rem;
@@ -121,7 +125,7 @@
 }
 
 .about-button-contact{
-    font-size: 1rem;
+    font-size: .875rem;
     color: #7874F4;
     margin: 4rem auto 0;
 }
