--- a/src/components/Pages/NotFound.css
+++ b/src/components/Pages/NotFound.css
@@ -1,108 +1,146 @@
-.not-home-services {
-   margin: 6rem auto 3rem;
-   overflow: hidden;
-   position: relative;
+.not-home-services{
+
+    margin: 6rem auto 3rem;
+    overflow: hidden;
+    position: relative;
+    
 }
 
-.not-home-services-bg {
-   opacity: 0%;
-   z-index: -1;
+.not-home-services-bg{
+    opacity: 0%;
+    z-index: -1;
 }
 
-.not-div-about-hero {
-   height: calc(100vh - 30rem);
-   margin-top: 8rem;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   width: 100%;
-   overflow: hidden;
-   position: relative;
+.not-div-about-hero{
+    height: calc(100vh - 30rem);
+    margin-top: 8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
 }
 
-.not-home-services-h2 {
-   font-size: 48px; /* Tamaño del texto */
-   color: transparent; /* Hace el relleno del texto transparente */
-   -webkit-text-stroke: 0.1px #7874f4; /* Borde del texto con grosor y color */
-   /* Borde del texto para navegadores compatibles */
-   font-weight: bold;
+.not-home-services-h2{
+    font-size: 48px; /* Tamaño del texto */
+    color: transparent; /* Hace el relleno del texto transparente */
+    -webkit-text-stroke: 0.1px #7874F4; /* Borde del texto con grosor y color */
+ /* Borde del texto para navegadores compatibles */
+    font-weight: bold;
 }
+
+
+
+
 
 @media (min-width: 40rem) {
-   .home-services-info {
-      display: flex;
-      flex-direction: column;
-   }
-   .not-home-services-bg {
-      align-self: center;
-      margin-left: 4rem;
-      opacity: 0%;
-      z-index: -1;
-   }
-
-   .home-services-bg {
-      background-position: 0 50%;
-   }
-   .home-services-btn {
-      margin-top: 3rem;
-   }
+    .home-services-info{
+        display: flex;
+        flex-direction: column;
+    }
+    .not-home-services-bg{
+        align-self: center;
+        margin-left: 4rem;
+        opacity: 0%;
+        z-index: -1;
+    }
+    .home-services-p{
+        font-size: 1.35em;
+        line-height: 1.725rem;
+        padding-top: 2rem;
+    }
+    .home-services-bg{
+        background-position: 0 50%;
+    }
+    .home-services-btn {
+        margin-top: 3rem;
+    }
 }
 
-@media (min-width: 56.25rem) {
-   /* .home-services-info{
+@media(min-width:56.25rem){
+    .home-services-info{
         padding: 0 2.5rem;
-    }*/
-   .home-services-h2 {
-      font-size: 4.5em;
-   }
+    }
+    .home-services-h2{
+        font-size: 4.5em;
+    }
 
-   .home-services-info {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-   }
-   .not-home-services-bg {
-      max-width: 40rem;
-      width: 70vw;
-      height: 90%;
-      margin: 0;
-   }
-   .home-services-bg {
-      background-position: 0 10%;
-   }
+    .home-services-info{
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .not-home-services-bg{
+        max-width: 40rem;
+        width: 70vw;
+        height: 90%;
+        margin: 0;
+    }
+    .home-services-p{
+        max-width: 35rem;
+    }
+    .home-services-bg{
+        background-position: 0 10%;
+    }
 }
 
-@media (min-width: 90rem) {
-   /* .home-services-h2{
+@media(min-width: 90rem){
+    .home-services-info{
+        padding: 0 4rem;
+    }
+    /* .home-services-h2{
         font-size: 4.5em;
     } */
-   .home-services-text > button {
-      margin-top: 4rem;
-   }
-   .not-home-services-bg {
-      max-width: 45rem;
-      width: 70vw;
-      height: 70%;
-      margin: 0;
-   }
-   .home-services-bg {
-      background-position: 0 10%;
-   }
-   .home-services-btn {
-      margin-top: 4rem;
-   }
+    .home-services-p{
+        font-size: 1.875em;
+        line-height: 2.23rem;
+        max-width: 40rem;
+    }
+    .home-services-text > button{
+       margin-top: 4rem;
+    }
+    .not-home-services-bg{
+        max-width: 45rem;
+        width: 70vw;
+        height: 70%;
+        margin: 0;
+    }
+    .home-services-bg{
+        background-position: 0 10%;
+    }
+    .home-services-p{
+        font-size: 1.875rem;
+        line-height: 2rem;
+        max-width: 40rem;
+    }
+    .home-services-btn {
+        margin-top: 4rem;
+    }
 }
 
-@media (min-width: 110rem) {
-   .home-services-btn {
-      position: relative;
-      left: -2rem;
-      z-index: 1;
-   }
-   .not-home-services-bg {
-      max-width: 55rem;
-      width: 90vw;
-      height: 60%;
-      margin-left: 8rem;
-   }
+@media(min-width: 110rem){
+    .home-services-p{
+        position: relative;
+        left: -2rem;
+        z-index: 1;
+        font-size: 1.875rem;
+        line-height: 2rem;
+        max-width: 48rem;
+    }
+    .home-services-btn {
+        position: relative;
+        left: -2rem;
+        z-index: 1;
+    }
+    .not-home-services-bg{
+        max-width: 55rem;
+        width: 90vw;
+        height: 60%;
+        margin-left: 8rem;
+    }
+    .home-services-p{
+        font-size: 2em;
+        line-height: 2.3rem;
+    }
 }
